# cinquis

./: LICENSE  README.md  pyproject.toml
src/: bow.py  intents.py  trm1.py
src/cinquis/: .gitignore  tautil.py  testcinquis.py
test/: .intents.json.kate-swp  intents.json  test_intents.py  test_tautil.py
test/Corpus/: controlstatements.txt  definestatements.txt  includestatements.txt  methodcallstatements.txt  pragmastatements.txt  returnstatements.txt  sqlconstrings.txt  varNum.txt  varStr.txt  varVar.txt  varstatements.txt
test/Corpus/.ipynb_checkpoints/: controlstatements-checkpoint.txt  sqlconstrings-checkpoint.txt  varstatements-checkpoint.txt
