[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cinquis"
version = "0.0.2"
authors = [
  { name="gcc71", email="moore938@regis.edu" },
]
description = "Code Inquisitor Utilities"
readme = "README.md"
requires-python = ">=3.7"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[project.urls]
"Homepage" = "https://github.com/gcc71/cinquis"
"Bug Tracker" = "https://github.com/gcc71/cinquis/issues"
